--- a/site/psi19/quiz/templates/quiz/game_question.html
+++ b/site/psi19/quiz/templates/quiz/game_question.html
@@ -15,6 +15,8 @@
 <button type="button" onclick="answer(3);">Answer 4</button><br><br>
 
 <script>
+    var user_id         = "{{user_id}}"
+
     var question_id     = "question_text";
     var question_text   = "{{question.question}}";
 
@@ -37,14 +39,26 @@
 
     function answer(answer_ind) {
         console.log("Answer: " + answer_ind);
-
+        
         answer_data = {
             'command':      'answer',
             'game_id':      game_id,
-            'answer_ind':   answer_ind
+            'answer_ind':   answer_ind,
+            'user_id':      user_id
         };
 
         gameSocket.send(JSON.stringify(answer_data));
+    }
+
+    gameSocket.onmessage = function(message) {
+        console.log('Received json: ', message);
+
+        var data = JSON.parse(message.data);
+        
+        if (data.msg_type == 3) {
+            window.location.replace("/game/" + game_id);
+            return
+        }
     }
 </script>
 
