--- a/site/psi19/quiz/templates/quiz/game_waiting_room.html
+++ b/site/psi19/quiz/templates/quiz/game_waiting_room.html
@@ -14,7 +14,7 @@
     var game_id = "{{ game_id }}";
     var player_ids = ["player_one", "player_two", "player_three", "player_four"]
 
-    var ws_path = 'ws://127.0.0.1:8000/ws/game/{{ game_id }}';
+    var ws_path = 'ws://' + window.location.host + '/ws/game/{{ game_id }}';
     console.log("Connecting to " + ws_path);
 
     var gameSocket = new WebSocket(ws_path);
