Notifications added (not invites yet)

--- a/site/psi19/quiz/templates/quiz/base.html
+++ b/site/psi19/quiz/templates/quiz/base.html
@@ -95,7 +95,6 @@
                                     {% endif %}
 
 
-                                    <!-- Danlo pls help ovo je ruzno ko djvao :( -->
                                     <!--Moderator, admin i senior mogu da dodaju pitanja-->
                               
 
@@ -185,7 +184,6 @@
     </header>
     <!-- /Header and Menu-->
 
-
     <!-- Page Content -->
     {% block content %}
 
@@ -205,6 +203,55 @@
     <!-- /Footer -->
 
     <!-- Scripts -->
+
+
+    {% if user.is_authenticated %}
+        <script>
+            var user_id = "{{user.id}}";
+            
+            console.log(user_id);
+
+            var ws_path = 'ws://' + window.location.host + '/ws/user/{{ user.id }}';
+            
+            console.log("Connecting to " + ws_path);
+
+            var userSocket = new WebSocket(ws_path);
+
+            userSocket.onmessage = function(message){
+
+                //testing 
+                console.log(message);
+
+                var data = JSON.parse(message.data);
+
+                if(data.error){
+                    window.alert(data.error);
+                }
+
+                window.alert(data.dummy)
+
+            }
+
+            userSocket.onclose = function(e){
+                console.error('Socket closed unexpectedly');
+            }
+
+            function callFriend(id){
+                console.log('Calling a friend' + id);
+                
+                friend_data = {
+                    'id' : id,
+                    'message' : 'Success',
+                    'command' : 'join_my_game'
+                };
+                
+                userSocket.send(JSON.stringify(friend_data));
+
+            }
+        
+        </script>
+    {% endif %}
+
     <!-- jquery -->
     <script src="{% static 'quiz/jquery-1.12.1.min.js' %}"></script>
     <!-- bootstrap js -->
