Notifications working, titles fixed

--- a/site/psi19/quiz/templates/quiz/add_question.html
+++ b/site/psi19/quiz/templates/quiz/add_question.html
@@ -1,5 +1,9 @@
 {% extends "quiz/base.html" %}
 
+{% block title%}
+    Add question
+{% endblock %}
+
 {% block content %}
       
 <!-- Error Message for bad login -->
