--- a/site/psi19/quiz/templates/quiz/approve_moderator.html
+++ b/site/psi19/quiz/templates/quiz/approve_moderator.html
@@ -1,5 +1,10 @@
 {% extends "quiz/base.html" %}
 
+
+{% block title%}
+    Approve moderators
+{% endblock %}
+
 {% block content %}
 
 <div class="container">
