--- a/site/psi19/quiz/templates/quiz/choose_avatar.html
+++ b/site/psi19/quiz/templates/quiz/choose_avatar.html
@@ -1,5 +1,10 @@
 {% extends "quiz/base.html" %}
 
+
+{% block title%}
+    Choose Your avatar
+{% endblock %}
+
 {% block content %}
 
 <!-- Page Content -->
