--- a/site/psi19/quiz/templates/quiz/friends_page.html
+++ b/site/psi19/quiz/templates/quiz/friends_page.html
@@ -1,4 +1,10 @@
 {% extends "quiz/base.html" %} 
+
+
+{% block title%}
+    Friends page
+{% endblock %}
+
 {% block content %}
 
 <!-- Friends Page Content -->
