--- a/site/psi19/quiz/templates/quiz/game_question.html
+++ b/site/psi19/quiz/templates/quiz/game_question.html
@@ -1,5 +1,10 @@
 {% extends "quiz/base.html" %}
 
+
+{% block title%}
+    uQUIZavanje
+{% endblock %}
+
 {% block content %}
 
 <h1>Game Question</h1>
