--- a/site/psi19/quiz/templates/quiz/game_waiting_room.html
+++ b/site/psi19/quiz/templates/quiz/game_waiting_room.html
@@ -1,5 +1,10 @@
 {% extends "quiz/base.html" %}
 
+
+{% block title %}
+    Waiting room
+{% endblock %}
+
 {% block content %}
 
 <h1>Players in the game:</h1>
