--- a/site/psi19/quiz/templates/quiz/my_profile.html
+++ b/site/psi19/quiz/templates/quiz/my_profile.html
@@ -1,4 +1,11 @@
-{% extends "quiz/base.html" %} {% load static %} {% block content %}
+{% extends "quiz/base.html" %}
+
+
+{% block title%}
+    Profile page
+{% endblock %}
+
+{% load static %} {% block content %}
 <!-- Page Content -->
 
 <div class="container">
