--- a/site/psi19/quiz/templates/quiz/rank_list.html
+++ b/site/psi19/quiz/templates/quiz/rank_list.html
@@ -1,4 +1,11 @@
-{% extends "quiz/base.html" %} {% block content %}
+{% extends "quiz/base.html" %}
+
+
+{% block title%}
+    Rank list
+{% endblock %}
+
+{% block content %}
 
 <div class="container text-center">
   <div class="row d-flex justify-content-center">
