--- a/site/psi19/quiz/templates/quiz/search_results.html
+++ b/site/psi19/quiz/templates/quiz/search_results.html
@@ -1,4 +1,10 @@
 {% extends "quiz/base.html" %}
+
+
+{% block title%}
+    Rank list
+{% endblock %}
+
 {% block content %}
 
 <div class="container text-center">
