--- a/site/psi19/quiz/templates/quiz/signup.html
+++ b/site/psi19/quiz/templates/quiz/signup.html
@@ -1,5 +1,10 @@
 {% extends "quiz/base.html" %}
 
+
+{% block title%}
+    Sign up
+{% endblock %}
+
 {% block content %}
 
 <!-- Error Message for bad login -->
