--- a/site/psi19/quiz/templates/quiz/trophy_page.html
+++ b/site/psi19/quiz/templates/quiz/trophy_page.html
@@ -1,4 +1,11 @@
-{% extends "quiz/base.html" %} {% block content %}
+{% extends "quiz/base.html" %} 
+
+
+{% block title%}
+    Trophies
+{% endblock %}
+
+{% block content %}
 
 <!-- Page Content -->
 
