--- a/site/psi19/quiz/templates/quiz/home.html
+++ b/site/psi19/quiz/templates/quiz/home.html
@@ -1,5 +1,10 @@
 {% extends "quiz/base.html" %}
 
+
+{% block title%}
+    uQUIZavanje
+{% endblock %}
+
 {% block content %}
 
 <div class="container text-center">
