--- a/site/psi19/quiz/templates/quiz/list_all_questions.html
+++ b/site/psi19/quiz/templates/quiz/list_all_questions.html
@@ -1,5 +1,10 @@
 {% extends "quiz/base.html" %}
 
+
+{% block title%}
+    All questions
+{% endblock %}
+
 {% block content %}
 
 <div class="container">
