--- a/site/psi19/quiz/templates/quiz/questions_that_need_validation.html
+++ b/site/psi19/quiz/templates/quiz/questions_that_need_validation.html
@@ -1,5 +1,10 @@
 {% extends "quiz/base.html" %}
 
+
+{% block title%}
+    Question validation page
+{% endblock %}
+
 {% block content %}
 
 <div class="container">
