--- a/site/psi19/quiz/templates/quiz/game_waiting_room.html
+++ b/site/psi19/quiz/templates/quiz/game_waiting_room.html
@@ -36,7 +36,7 @@
     
                 <p>{{friend.second_friend_id__rank}}</p>
     
-                <button type="button" onclick="callFriend('{{friend.second_friend_id}}')">INVITE</button>
+                <button type="button" onclick="callFriend('{{friend.second_friend_id}}', '{{ game_id }}', '{{user.username}}')">INVITE</button>
         </div>
         <!-- /Add Friend card -->
     
