Mini javascript timer working

--- a/site/psi19/quiz/templates/quiz/game_question.html
+++ b/site/psi19/quiz/templates/quiz/game_question.html
@@ -8,6 +8,8 @@
 {% block content %}
 
 <h1>Game Question</h1>
+<!-- Display the countdown timer in an element -->
+<p id="demo"></p>
 <h2 id="question_text"></h2><br>
 
 <h3>Answer 1: </h3><h3 id="answer_one"></h3>
@@ -19,6 +21,37 @@
 <h3>Answer 4: </h3><h3 id="answer_four"></h3>
 <button type="button" onclick="answer(3);">Answer 4</button><br><br>
 
+
+<script>
+// Set the date we're counting down to
+var deadline = new Date();
+//due to screen lag
+deadline.setSeconds(deadline.getSeconds() + 12);
+
+var countDownDate = deadline.getTime();
+
+// Update the count down every 1 second
+var x = setInterval(function() {
+
+  // Get today's date and time
+  var now = new Date().getTime();
+
+  // Find the distance between now and the count down date
+  var distance = countDownDate - now;
+
+  // Time calculations for days, hours, minutes and seconds
+  var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+  // Display the result in the element with id="demo"
+  document.getElementById("demo").innerHTML = seconds + "s ";
+
+  // If the count down is finished, write some text
+  if (distance < 0) {
+    clearInterval(x);
+    document.getElementById("demo").innerHTML = "EXPIRED";
+  }
+}, 1000);
+</script>
 <script>
     var user_id         = "{{user_id}}"
 
