Game Roome and Game Question Fornt End Done

--- a/site/psi19/quiz/static/quiz/style.css
+++ b/site/psi19/quiz/static/quiz/style.css
@@ -582,7 +582,11 @@ body {
     Create Game
 \*--------------------------------*/
 
-
+.player_in_game {
+  margin-left: 20px; 
+  margin-right: 20px; 
+  border: 1px #2699FB solid;
+}
 
 
 /*--------------------------------*\
