--- a/site/psi19/quiz/templates/quiz/game_question.html
+++ b/site/psi19/quiz/templates/quiz/game_question.html
@@ -7,17 +7,39 @@
 
 {% block content %}
 
-<h1>Game Question</h1>
-<h2 id="question_text"></h2><br>
+<div class="container">
+    <div class="row d-flex justify-content-center text-center">
+        <div class="col-md-10" style="margin-top: 50px; margin-bottom: 50px; border: 1px #2699FB solid; padding: 20px;">
+            <h3 style="color: #2699FB; margin-bottom: 10px;">Game Question</h3>
+            <h3 id="question_text" style="color: #2699FB"></h3>
+        </div>
 
-<h3>Answer 1: </h3><h3 id="answer_one"></h3>
-<button type="button" onclick="answer(0);">Answer 1</button><br><br>
-<h3>Answer 2: </h3><h3 id="answer_two"></h3>
-<button type="button" onclick="answer(1);">Answer 2</button><br><br>
-<h3>Answer 3: </h3><h3 id="answer_three"></h3>
-<button type="button" onclick="answer(2);">Answer 3</button><br><br>
-<h3>Answer 4: </h3><h3 id="answer_four"></h3>
-<button type="button" onclick="answer(3);">Answer 4</button><br><br>
+        <div class="col-md-5" style="margin: 5px; border: 1px #2699FB solid; background: #2699FB">
+            <button type="button" class="btn" onclick="answer(0);" style="width: 100%; height: 100%;"><h3 id="answer_one" style="color: white;"></h3></button>
+        </div>
+
+        <div class="col-md-5" style="margin: 5px; border: 1px #2699FB solid; background: #2699FB">  
+            <button type="button" class="btn" onclick="answer(1);" style="width: 100%; height: 100%;"><h3 id="answer_two" style="color: white;"></h3></button>
+        </div>
+
+        <div class="col-md-5" style="margin: 5px; border: 1px #2699FB solid; background: #2699FB">
+            <button type="button" class="btn" onclick="answer(2);" style="width: 100%; height: 100%;"><h3 id="answer_three" style="color: white;"></h3></button>
+        </div>
+
+        <div class="col-md-5" style="margin: 5px; border: 1px #2699FB solid; background: #2699FB">      
+            <button type="button" class="btn" onclick="answer(3);" style="width: 100%; height: 100%;"><h3 id="answer_four" style="color: white;"></h3></button>
+        </div>
+
+
+    </div>
+</div>
+
+
+
+
+
+
+
 
 <script>
     var user_id         = "{{user_id}}"
