--- a/site/psi19/quiz/templates/quiz/my_profile.html
+++ b/site/psi19/quiz/templates/quiz/my_profile.html
@@ -66,6 +66,10 @@
             <td>{{ percentage }}%</td>
           </tr>
           <tr style="color: #2699FB;">
+              <td>Exp</td>
+              <td>{{ curUser.exp }}</td>
+          </tr>
+          <tr style="color: #2699FB;">
             <td>Lvl</td>
             <td>{{ curUser.get_level }}</td>
           </tr>
