--- a/site/psi19/quiz/templates/quiz/game_question.html
+++ b/site/psi19/quiz/templates/quiz/game_question.html
@@ -91,6 +91,11 @@
     var msPassed;
     var startTime;
 
+    function sleepFor( sleepDuration ){
+        var now = new Date().getTime();
+        while(new Date().getTime() < now + sleepDuration){ /* do nothing */ } 
+    }
+
     function questionTimer() {
         startTime = new Date();
 
@@ -103,8 +108,12 @@
             document.getElementById("time").innerHTML = seconds + " s " + miliseconds + " ms";
             if(msPassed>10000){
                 document.getElementById("time").innerHTML = "Time is up";
+                
 
+                console.log("BUTTON STATUS: ", document.getElementById("btn1").disabled);
                 if(document.getElementById("btn1").disabled == false){
+                    var delay = Math.floor(Math.random() * 2000);
+                    sleepFor(delay);
                     answer(-1);
                 }
                 window.clearInterval(timerId);
